--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/alvaroluna/liri-node-app#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "spotify": "^0.3.0"
   }
