--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
-    "spotify": "^0.3.0"
+    "node-spotify-api": "^1.1.1"
   }
 }
